Fix general alignments

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -23,9 +27,17 @@ code {
   flex-wrap: wrap;
   padding: 0;
   justify-content: space-between;
-  flex: '0 0 100%',
+  width: 100%;
+  flex: 0 0 100%,
 }
 
+#country-list > * {
+  margin-bottom: 2.5rem;
+}
+
+.error-msg {
+  flex: 0 0 100%;
+}
 /* #country-list > * {
   order: 0;
 } */
